# CrossPlatMultiFile_LeaProj

./: .gitignore  CMakeLists.txt  ReadME.md  main.cpp
include/: Gun.h  Soldier.h
src/: Gun.cpp  Soldier.cpp
